fixed running on windows